--- a/packages/site/common/components/example/src-switcher.module.css
+++ b/packages/site/common/components/example/src-switcher.module.css
@@ -2,4 +2,5 @@
 
 .root {
   color: var(--psColorsWhite);
+  margin-bottom: var(--psLayoutSpacingXl);
 }
